--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <a href="#reels">Reels</a>
       <a href="#brands">Brendlar</a>
       <a href="#services">Xizmatlar</a>
-      <a href="#face.html">Brand Face xizmati</a>
+      <a href="face.html">Brand Face xizmati</a>
       <a href="#contact">Bog'lanish</a>
     </nav>
   </header>
@@ -252,7 +252,8 @@
       "https://www.youtube.com/embed/CjJl16eWI4Q",
       "https://www.youtube.com/embed/OMjC1cn5uxY",
       "https://www.youtube.com/embed/PvdqFrQkjx8",
-      "https://www.youtube.com/embed/OetwkS3tFLM"
+      "https://www.youtube.com/embed/OetwkS3tFLM",
+      "https://www.youtube.com/embed/YPyzox7sGSA"
     ];
 
     const reelsPerPage = 6;
