--- a/face.html
+++ b/face.html
@@ -134,7 +134,7 @@
   <section class="section" id="about">
     <h2>Brand Face xizmati</h2>
     <div class="about-face">
-      <img src="img/brandface_main.jpg" alt="Brand Face" />
+      <img src="img/profile.jpg" alt="Brand Face" />
       <div class="about-info">
         <p><b>Sizning brendingizga ishonchli, jonli, sotuvchan yuz kerakmi?</b> Menda bu borada kuchli tajriba, kameradagi tabiiy harakat, ishonchli gapirish va marketing ruhiyatini tushunish bor. Men sizning brendingiz uchun:</p>
         <ul>
