--- a/face.html
+++ b/face.html
@@ -134,7 +134,7 @@
   <section class="section" id="about">
     <h2>Brand Face xizmati</h2>
     <div class="about-face">
-      <img src="img/profile.jpg" alt="Brand Face" />
+      <img src="img/head1.jpg" alt="Brand Face" />
       <div class="about-info">
         <p><b>Sizning brendingizga ishonchli, jonli, sotuvchan yuz kerakmi?</b> Menda bu borada kuchli tajriba, kameradagi tabiiy harakat, ishonchli gapirish va marketing ruhiyatini tushunish bor. Men sizning brendingiz uchun:</p>
         <ul>
@@ -151,9 +151,9 @@
   <section class="section">
     <h2>Video chiqishlarimdan namunalar</h2>
     <div class="carousel">
-      <img src="img/face1.jpg" alt="Chiqarilgan 1" />
-      <img src="img/face2.jpg" alt="Chiqarilgan 2" />
-      <img src="img/face3.jpg" alt="Chiqarilgan 3" />
+      <img src="img/head2.jpg" alt="Chiqarilgan 1" />
+      <img src="img/head3.jpg" alt="Chiqarilgan 2" />
+      <img src="img/head4.jpg" alt="Chiqarilgan 3" />
     </div>
   </section>
 
