--- a/face.html
+++ b/face.html
@@ -154,6 +154,7 @@
       <img src="img/head2.jpg" alt="Chiqarilgan 1" />
       <img src="img/head3.jpg" alt="Chiqarilgan 2" />
       <img src="img/head4.jpg" alt="Chiqarilgan 3" />
+      <img src="img/head5.jpg" alt="Chiqarilgan 4" />
     </div>
   </section>
 
