--- a/face.html
+++ b/face.html
@@ -1,191 +1,44 @@
 <!DOCTYPE html>
-<html lang="uz">
+<html lang="ru">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Brand Face - Just Oripov</title>
-  <link rel="shortcut icon" href="./img/profile.jpg" type="image/x-icon">
+  <title>Стендап Концерт</title>
   <style>
-    body {
+    * {
+      box-sizing: border-box;
       margin: 0;
+      padding: 0;
+    }
+
+    body, html {
+      height: 100%;
+      width: 100%;
       font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      color: #333;
-    }
-    header {
-      background: #111;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-    nav a {
-      margin: 0 15px;
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s ease;
-    }
-    nav a:hover {
-      color: #00aced;
-    }
-    header img {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      margin-top: 10px;
-      object-fit: cover;
-    }
-    .section {
-      padding: 40px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-    .section h2 {
-      margin-bottom: 20px;
-      text-align: center;
-    }
-    .about-face {
+      background-color: white;
       display: flex;
-      flex-direction: column;
-      gap: 30px;
+      justify-content: center;
+      align-items: center;
     }
-    @media(min-width: 768px) {
-      .about-face {
-        flex-direction: row;
+
+    .message {
+      color: rgba(1, 82, 147, 1);
+      font-size: 2rem;
+      text-align: center;
+      padding: 1rem;
+    }
+
+    @media (max-width: 600px) {
+      .message {
+        font-size: 1.5rem;
+        padding: 0.5rem;
       }
-    }
-    .about-face img {
-      width: 100%;
-      max-width: 400px;
-      border-radius: 12px;
-      object-fit: cover;
-    }
-    .about-info {
-      flex: 1;
-    }
-    .about-info p {
-      font-size: 18px;
-      line-height: 1.6;
-    }
-    .carousel {
-      display: flex;
-      overflow-x: auto;
-      gap: 10px;
-      scroll-snap-type: x mandatory;
-    }
-    .carousel img {
-      width: 300px;
-      height: auto;
-      border-radius: 10px;
-      object-fit: cover;
-      scroll-snap-align: center;
-      flex-shrink: 0;
-    }
-    .portfolio-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-top: 30px;
-    }
-    .portfolio-item {
-      background: white;
-      padding: 15px;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      text-align: center;
-    }
-    iframe {
-      width: 100%;
-      height: 200px;
-      border: none;
-      border-radius: 6px;
-    }
-    .contact a {
-      display: inline-block;
-      margin: 10px;
-      color: #0066cc;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .contact a:hover {
-      text-decoration: underline;
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: #111;
-      color: #fff;
-      margin-top: 40px;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Just Oripov</h1>
-    <p>Tez, sifat, kreativ bo'lishini yaxshi ko'raman!</p>
-    <img src="img/profile.jpg" alt="Just Oripov" />
-    <nav>
-      <a href="index.html">Bosh sahifa</a>
-      <a href="#portfolio">Portfolio</a>
-      <a href="#contact">Bog'lanish</a>
-    </nav>
-  </header>
-
-  <section class="section" id="about">
-    <h2>Brand Face xizmati</h2>
-    <div class="about-face">
-      <img src="img/head1.jpg" alt="Brand Face" />
-      <div class="about-info">
-        <p><b>Sizning brendingizga ishonchli, jonli, sotuvchan yuz kerakmi?</b> Menda bu borada kuchli tajriba, kameradagi tabiiy harakat, ishonchli gapirish va marketing ruhiyatini tushunish bor. Men sizning brendingiz uchun:</p>
-        <ul>
-          <li>🎯 Real mijoz sifatida ishonchli tavsiyalar bilan chiqaman</li>
-          <li>🎥 Kamera oldida tabiiy, jozibali va ishonchli obraz yarataman</li>
-          <li>🚀 Brendingizni mijozga yaqinlashtiradigan chiqishlar qilaman</li>
-          <li>💼 Sizning mahsulotingiz yoki xizmatingizni jonlantiraman</li>
-        </ul>
-        <p><i>Ishonch beruvchi so‘zlar, samimiy tabassum va kuchli chiqishlar orqali mijoz qalbini zabt etaman.</i></p>
-      </div>
-    </div>
-  </section>
-
-  <section class="section">
-    <h2>Video chiqishlarimdan namunalar</h2>
-    <div class="carousel">
-      <img src="img/head2.jpg" alt="Chiqarilgan 1" />
-      <img src="img/head3.jpg" alt="Chiqarilgan 2" />
-      <img src="img/head4.jpg" alt="Chiqarilgan 3" />
-      <img src="img/head5.jpg" alt="Chiqarilgan 4" />
-    </div>
-  </section>
-
-  <section class="section" id="portfolio">
-    <h2>Video Portfolio</h2>
-    <div class="portfolio-grid">
-      <div class="portfolio-item">
-        <iframe src="https://www.youtube.com/embed/G79DJ8iReSE"></iframe>
-        <p>📹 Oziq-ovqat brendi uchun obrazli chiqish</p>
-      </div>
-      <div class="portfolio-item">
-        <iframe src="https://www.youtube.com/embed/TaYM3tP1uWI"></iframe>
-        <p>📹 Mahalliy xizmat brendining yuzi sifatida</p>
-      </div>
-      <div class="portfolio-item">
-        <iframe src="https://www.youtube.com/embed/ymRdBVWC9hI"></iframe>
-        <p>📹 Ishonchli imidjni yaratish uchun chiqish</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="section contact" id="contact">
-    <h2>Bog'lanish</h2>
-    <a href="https://t.me/just_oripov">Telegram</a>
-    <a href="https://instagram.com/just.oripov">Instagram</a>
-    <a href="mailto:kichkina.developer@gmail.com">Email</a>
-    <a href="tel:+998993630504">Telefon</a>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Just Oripov. Barcha huquqlar himoyalangan.</p>
-  </footer>
+  <div class="message">
+    Я же сказал — ничего особенного. Просто приходите на концерт.
+  </div>
 </body>
 </html>
