--- a/index.html
+++ b/index.html
@@ -191,6 +191,8 @@
       <img src="img/brand8.jpg" alt="Brand 8" class="brand-logo" />
       <img src="img/brand9.jfif" alt="Brand 9" class="brand-logo" />
       <img src="img/brand10.jpg" alt="Brand 10" class="brand-logo" />
+      <img src="img/channels4_profile.jpg" alt="Brand 10" class="brand-logo" />
+      <img src="img/unnamed.png" alt="Brand 10" class="brand-logo" />
     </div>
   </section>
 <!--
@@ -244,7 +246,7 @@
       "https://www.youtube.com/embed/LWRX38GHsoc",
       "https://www.youtube.com/embed/fLQTd992m6A",
       "https://www.youtube.com/embed/ANT09EWNwas",
-      "https://www.youtube.com/embed/CjJl16eWI4Q",
+      "https://www.youtube.com/embed/zDWzJgxuUPg",
       "https://www.youtube.com/embed/OMjC1cn5uxY",
       "https://www.youtube.com/embed/PvdqFrQkjx8",
       "https://www.youtube.com/embed/OetwkS3tFLM",
